--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,8 @@
                     &nbsp&nbsp&nbsp&nbsp -Established a foundation for future enhancements, including a recommendation
                     system for personalized
                     healthcare.<br>
-                    Impact: The system empowers users to receive timely health assessments and potential diagnoses,
+                    &nbsp&nbsp&nbsp&nbsp<br>
+                    Impact: <br>&nbsp&nbsp&nbsp&nbspThe system empowers users to receive timely health assessments and potential diagnoses,
                     facilitating proactive healthcare management and improving access to medical guidance outside of
                     clinical settings.
                 </div>
@@ -109,10 +110,10 @@
 
                     Software Development:<br>
                     &nbsp&nbsp&nbsp&nbsp- Developed AI model to recognize 6 distinct movement patterns:<br>
-                    &nbsp&nbsp&nbsp&nbsp• 2 Static patterns (open/closed positions)<br>
-                    &nbsp&nbsp&nbsp&nbsp• 4 Dynamic patterns (opening/closing, lateral movement, arm rotation, hand
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 2 Static patterns (open/closed positions)<br>
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 4 Dynamic patterns (opening/closing, lateral movement, arm rotation, hand
                     closure)<br>
-                    &nbsp&nbsp&nbsp&nbsp&nbsp- Trained the model using 70/30 split methodology with 5000+ iterations<br>
+                    &nbsp&nbsp&nbsp&nbsp- Trained the model using 70/30 split methodology with 5000+ iterations<br>
                     &nbsp&nbsp&nbsp&nbsp- Implemented real-time pattern recognition for immediate movement
                     classification<br>
                     &nbsp&nbsp&nbsp&nbsp- Created complete information processing chain: sensor input → pattern
@@ -136,10 +137,10 @@
                 virtual applications.<br>
                 &nbsp&nbsp&nbsp&nbsp<br>
                 <div class="description" style="display: none;">
-                    Signal Simulation: Generate synthetic EEG signals based on predefined patterns.
-                    Signal Processing: Implement algorithms for filtering and feature extraction in C++.
+                    Signal Simulation: Generate synthetic EEG signals based on predefined patterns.<br>
+                    Signal Processing: Implement algorithms for filtering and feature extraction in C++.<br>
                     User Interaction: Allow users to control actions (like moving a cursor) based on simulated brain
-                    activity.
+                    activity.<br>
                     Visualization: Provide real-time visual feedback of simulated brain signals and user actions.
                 </div>
 
@@ -196,8 +197,8 @@
                     quantitative data<br>
                     &nbsp&nbsp&nbsp&nbsp <br>
                     Impact:<br>
-                    The system enables healthcare professionals to remotely monitor patient progress, adjust
-                    rehabilitation<br>
+                    &nbsp&nbsp&nbsp&nbspThe system enables healthcare professionals to remotely monitor patient progress, adjust
+                    rehabilitation
                     protocols in real-time, and provide data-driven care decisions, significantly improving the<br>
                     rehabilitation process efficiency and effectiveness.<br>
                 </div>
