--- a/education.html
+++ b/education.html
@@ -41,7 +41,7 @@
             courses and certifications.</p>
         <br>
 
-        <h2>College</h2>
+        <h2>University</h2>
         <br>
 
         <ul>
