uopdate resume, docker added

--- a/skills.html
+++ b/skills.html
@@ -44,7 +44,7 @@
                         <div class="progress" style="width: 90%;"></div>
                     </div>
                 </div>
-                Proficient in Python for AI, data analysis, and signal processing <br>
+                Proficient in Python for AI, Machine Learning, data analysis, and signal processing <br>
                 <em>Application:</em> Developped an app to predict disease given a list of symptom using Deep Neural
                 Network and Machin learning models.
             </li>
@@ -99,8 +99,11 @@
             </li>
             <li><strong>AI and Machine Learning:</strong> Skilled with multiple programming libraries - TensorFlow,
                 Pytorch, scikit-learn,
-                pandas, MNE - and different ML models Deep Neural Networks,XGBoost, SVN and Random Forest.
+                pandas, MNE - and different ML models Deep Neural Networks,CNN ,XGBoost, SVN and Random Forest.
             </li>
+            <li><strong>Containerization (Docker):</strong>
+                Proficient with Docker for setting up, deploying, and managing
+                containerized applications to streamline development and deployment processes.</li>
             <li><strong>Problem-Solving and Critical Thinking:</strong> Skilled in identifying issues and generating
                 solutions efficiently.
             </li>
