--- a/skills.html
+++ b/skills.html
@@ -102,8 +102,8 @@
                 pandas, MNE - and different ML models Deep Neural Networks,CNN ,XGBoost, SVN and Random Forest.
             </li>
             <li><strong>Containerization (Docker):</strong>
-                Proficient with Docker for setting up, deploying, and managing
-                containerized applications to streamline development and deployment processes.</li>
+                Able to set up, deploy, and manage
+                containerized applications to streamline development and deployment processes on Docker .</li>
             <li><strong>Problem-Solving and Critical Thinking:</strong> Skilled in identifying issues and generating
                 solutions efficiently.
             </li>
