--- a/projects.html
+++ b/projects.html
@@ -87,7 +87,8 @@
                     system for personalized
                     healthcare.<br>
                     &nbsp&nbsp&nbsp&nbsp<br>
-                    Impact: <br>&nbsp&nbsp&nbsp&nbspThe system empowers users to receive timely health assessments and potential diagnoses,
+                    Impact: <br>&nbsp&nbsp&nbsp&nbspThe system empowers users to receive timely health assessments and
+                    potential diagnoses,
                     facilitating proactive healthcare management and improving access to medical guidance outside of
                     clinical settings.
                 </div>
@@ -110,8 +111,10 @@
 
                     Software Development:<br>
                     &nbsp&nbsp&nbsp&nbsp- Developed AI model to recognize 6 distinct movement patterns:<br>
-                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 2 Static patterns (open/closed positions)<br>
-                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 4 Dynamic patterns (opening/closing, lateral movement, arm rotation, hand
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 2 Static patterns
+                    (open/closed positions)<br>
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp• 4 Dynamic patterns
+                    (opening/closing, lateral movement, arm rotation, hand
                     closure)<br>
                     &nbsp&nbsp&nbsp&nbsp- Trained the model using 70/30 split methodology with 5000+ iterations<br>
                     &nbsp&nbsp&nbsp&nbsp- Implemented real-time pattern recognition for immediate movement
@@ -131,17 +134,18 @@
             </li>
             <li>
                 <strong>
-                    Brain-Computer Interface Simulator</strong> (C++) - In Progress -
+                    Brain-Computer Interface Simulator</strong> (Python) - In Progress -
                 <a href="https://github.com/Alex-Irae/BCI_SIM" target="_blank">[View on GitHub]</a><br>
                 Software-based BCI simulator that mimics the processing of EEG signals and allows users to control
                 virtual applications.<br>
                 &nbsp&nbsp&nbsp&nbsp<br>
                 <div class="description" style="display: none;">
-                    Signal Simulation: Generate synthetic EEG signals based on predefined patterns.<br>
-                    Signal Processing: Implement algorithms for filtering and feature extraction in C++.<br>
-                    User Interaction: Allow users to control actions (like moving a cursor) based on simulated brain
-                    activity.<br>
-                    Visualization: Provide real-time visual feedback of simulated brain signals and user actions.
+                    Project Objectives:<br>
+                    &nbsp&nbsp&nbsp&nbsp- Develop a robust neural decoding system that allows users with paralysis to
+                    control computers or
+                    devices.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Create a user-friendly interface for seamless interaction.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Ensure high accuracy and reliability in interpreting neural signals.<br>
                 </div>
 
                 <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
@@ -197,7 +201,8 @@
                     quantitative data<br>
                     &nbsp&nbsp&nbsp&nbsp <br>
                     Impact:<br>
-                    &nbsp&nbsp&nbsp&nbspThe system enables healthcare professionals to remotely monitor patient progress, adjust
+                    &nbsp&nbsp&nbsp&nbspThe system enables healthcare professionals to remotely monitor patient
+                    progress, adjust
                     rehabilitation
                     protocols in real-time, and provide data-driven care decisions, significantly improving the<br>
                     rehabilitation process efficiency and effectiveness.<br>
