ortho and grammar

--- a/education.html
+++ b/education.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Education - Alexandre Carminot</title>
+    <title>Education | Alexandre Carminot</title>
     <link rel="icon" type="image/x-icon" href="assets/portfolio.ico">
     <link rel="stylesheet" href="style.css">
     <style>
@@ -63,17 +63,17 @@
         <h2>Certifications</h2>
         <br>
         <ul>
-            <li><strong>Advanced Medical neuroscience,</strong> Duke University -Online Course- (Fall 2024)</li>
-            <li><strong>Deep Learning and AI TensorFlow,</strong> DeepLearning.AI -Onlince Course- (Fall 2024)</li>
-            <li><strong>Machine Learning,</strong> Stanford x DeepLearning.AI -Onlince Course- (Fall 2024)</li>
-            <li><strong>Certificate of Aeronautical Initiation,</strong> Foundational knowledge in aeronautics -Paris-
+            <li><strong>Advanced Medical Neuroscience,</strong> Duke University -Online Course- (Fall 2024)</li>
+            <li><strong>Deep Learning and AI with TensorFlow,</strong> DeepLearning.AI -Online Course- (Fall 2024)</li>
+            <li><strong>Machine Learning,</strong> Stanford x DeepLearning.AI -Online Course- (Fall 2024)</li>
+            <li><strong>Certificate of Aeronautical Initiation,</strong> Foundational knowledge in aeronautics - Paris
                 (2023)</li>
         </ul>
         <br>
         <h2>High School</h2>
         <br>
         <ul>
-            <li><strong>Scientific Section,</strong> Baccalauréat with honours, Passy, Rueil-Malmaison(09/2016 -
+            <li><strong>Scientific Section,</strong> Baccalauréat with honors, Passy, Rueil-Malmaison(09/2016 -
                 06/2019)
             </li>
         </ul>
