--- a/experience.html
+++ b/experience.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Experience - Alexandre Carminot</title>
+    <title>Experience | Alexandre Carminot</title>
     <link rel="icon" type="image/x-icon" href="assets/portfolio.ico">
     <link rel="stylesheet" href="style.css">
 
@@ -28,7 +28,7 @@
     </header>
 
     <section>
-        <h1>My Experiences</h1>
+        <h1>My Experience</h1>
         <br>
         <br>
 
@@ -52,9 +52,9 @@
 
         <ul>
             <li>
-                <strong>LLMs Ai agent,</strong> Outlier (Remote) <em>(Since January 2024)</em><br><br>
+                <strong>LLMs AI Agent,</strong> Outlier (Remote) <em>(Since January 2024)</em><br><br>
 
-                Provide detailed human feedback on language learning models (LLMs), enhancing AI systems by
+                Provides detailed human feedback on language learning models (LLMs), enhancing AI systems by
                 identifying errors and offering corrections.
                 Contributed to the models' understanding and performance improvements through comprehensive
                 evaluations.
@@ -62,7 +62,8 @@
             </li>
 
             <li>
-                <strong>Logistics Coordinator,</strong> Paris 2024 Olympic Games (Paris) <em>(Summer 2024)</em><br><br>
+                <strong>Logistics Coordinator,</strong> Logistics Coordinator, Paris 2024 Olympic Games (Paris)
+                <em>(Summer 2024)</em><br><br>
 
                 Played a key role in the logistics and coordination team to ensure smooth operations for the
                 event.
@@ -71,11 +72,12 @@
             </li>
 
             <li>
-                <strong>Private Tutor and Esport Coach,</strong> <em>(Summer 2022 & 2023)</em><br><br>
+                <strong>Private Tutor and Esports Coach,</strong> <em>(Summer 2022 & 2023)</em><br><br>
 
                 Delivered personalized tutoring sessions in French and English, adapting to various skill
                 levels.
-                Coached students in esports, improving their understanding and performance in competitive
+                Coached 10 students in esports, with skills varying from beginners to advanced, improving their
+                understanding and performance in competitive
                 gaming.
 
             </li>
