--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
 
     <section class="full-page" id="section0">
         <div class="home-content">
-            <h1>Hi, It's <span>Alexandre CARMINOT</span></h1>
-            <h3 class="typing-text">I'm an engineering student </h3>
-            <p>As a student of engineering and medicine, my journey is deeply rooted in the intersection of neuroscience
-                and technology. With a focus on medical engineering, I am driven by a passion for software development
-                and artificial intelligence, particularly in the realms of brain-computer interfaces, machine learning,
-                and neuroengineering. My work has spanned projects using Python, MATLAB, and C++ to explore data
-                analysis, signal processing, and AI-driven solutions. Currently studying at Tianjin University in
-                computer science and machine learning, I find
-                inspiration in collaborative environments that nurture creativity and challenge my problem-solving
-                abilities. Beyond academics, my love for sports, science, music, and cooking shapes a balanced approach
-                to life. Curiosity fuels my ambitions, as I continuously seek new challenges to deepen my understanding
-                and contribute to the fusion of technology and medicine in advancing neuroengineering innovations.
+            <h1>Hi, I'm <span>Alexandre CARMINOT</span></h1>
+            <h3 class="typing-text">I am an engineering student.</h3>
+            <p>AAs a student of engineering and medicine, my journey is deeply rooted in the intersection of
+                neuroscience and technology. Focusing on medical engineering, I am driven by a passion for software
+                development and artificial intelligence, particularly in the realms of brain-computer interfaces,
+                machine learning, and neuroengineering. My work has spanned projects using Python, MATLAB, and C++ to
+                explore data analysis, signal processing, and AI-driven solutions.<br> Currently studying computer
+                science and machine learning at Tianjin University, I find inspiration in collaborative environments
+                that nurture creativity and challenge my problem-solving abilities. <br> Beyond academics, my love for
+                sports, science, music, and cooking shapes a balanced lifestyle. Curiosity fuels my ambitions as I
+                continuously seek new challenges to deepen my understanding and contribute to the fusion of technology
+                and medicine in advancing neuroengineering innovations.
             </p>
             <div class="social-icons">
                 <a href="mailto:alexandre.carminot@outlook.com"><i class="fa-brands fa-at"></i></a>
@@ -65,10 +65,11 @@
         <div class="home-content">
             <h1>Sports 🥋</h1>
             <p>
-                I enjoy team sports like football and rugby, drawn to the dynamic and competitive nature of the games.
-                Martial arts also play a significant role in my life, where I hold a red belt in Taekwondo and a brown
-                belt in Judo. These practices keep me physically active while fostering discipline, respect, and
-                perseverance, offering both personal growth and fulfillment.
+                I enjoy team sports such as football and rugby, drawn to the dynamic and competitive nature of these
+                games.
+                Martial arts also play a significant role in my life; I hold a red belt in Taekwondo and a brown belt in
+                Judo. These practices keep me physically active while fostering discipline, respect, and perseverance,
+                which offer both personal growth and fulfillment.
             </p>
         </div>
         <div class="scroll-down-arrow">
@@ -82,9 +83,9 @@
         </div>
         <div class="home-content">
             <h1>🔭 Sciences 𓂀</h1>
-            <p>Science, in all its vastness, captures my curiosity, particularly the realms of astronomy, cosmology, and
-                archaeology. These fields invite me to ponder the mysteries of the universe and the stories etched into
-                the fabric of human history. I'm drawn to questions that challenge our understanding of existence,
+            <p>Science, in all its vastness, captures my curiosity, particularly in the realms of astronomy, cosmology,
+                and archaeology. These fields invite me to ponder the mysteries of the universe and the stories etched
+                into the fabric of human history.I am drawn to questions that challenge our understanding of existence,
                 stirring a sense of wonder about our place in the cosmos.</p>
         </div>
         <div class="scroll-down-arrow">
@@ -98,10 +99,11 @@
         </div>
         <div class="home-content">
             <h1>🎵 Music and Cooking</h1>
-            <p>My musical tastes are a blend of contrasts, from the elegance of classical compositions to the raw energy
-                of schizophrenic rock. Music weaves itself into my life, sparking creativity and offering moments of
-                reflection. In the kitchen, I find solace in cooking for myself, experimenting with flavors and recipes.
-                It's a personal ritual, where the process is as rewarding as the meal itself, providing both relaxation
+            <p>My musical tastes are a blend of contrasts, ranging from the elegance of classical compositions to the
+                raw energy of schizophrenic rock. Music weaves into my life, sparking creativity and offering moments of
+                reflection. n the kitchen, I find solace in cooking for myself and experimenting with flavors and
+                recipes.
+                It is a personal ritual, where the process is as rewarding as the meal itself, providing both relaxation
                 and creative expression.</p>
         </div>
 
