--- a/skills.html
+++ b/skills.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skills - Alexandre Carminot</title>
+    <title>Skills | Alexandre Carminot</title>
     <link rel="icon" type="image/x-icon" href="assets/portfolio.ico">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -45,8 +45,9 @@
                     </div>
                 </div>
                 Proficient in Python for AI, Machine Learning, data analysis, and signal processing <br>
-                <em>Application:</em> Developped an app to predict disease given a list of symptom using Deep Neural
-                Network and Machin learning models.
+                <em>Application:</em> Developed an app to predict disease given a list of symptom using Deep Neural
+                Network and Machine learning models.<br>
+                Currently developing a BCI simulator to control applications using brain signals.
             </li>
             <li>
                 <div class="skill-header">
@@ -70,13 +71,13 @@
             </li>
             <li>
                 <div class="skill-header">
-                    <strong>HTML, CSS & Js</strong>
+                    <strong>HTML, CSS, and JavaScript (JS)</strong>
                     <div class="progress-bar">
                         <div class="progress" style="width: 70%;"></div>
                     </div>
                 </div>
-                Knowledgeable in HTML, CSS & Js for structuring web content.<br>
-                <em>Application:</em> This portfolio is written from scratch using HTML, CSS & Js.
+                Knowledgeable in HTML, CSS, and JavaScript (JS) for structuring web content.<br>
+                <em>Application:</em> This portfolio was created from scratch using HTML, CSS, and JavaScript.
             </li>
             <li>
                 <div class="skill-header">
@@ -87,7 +88,6 @@
                 </div>
                 Familiar with C++ for performance-critical applications.<br>
                 <em>Application:</em> Applied C++ in neural network modeling and engineering tasks.
-                Currently creating a BCI simulator to control various apps with brain signals.
             </li>
         </ul>
         <br>
@@ -98,12 +98,12 @@
                 draw meaningful conclusions.
             </li>
             <li><strong>AI and Machine Learning:</strong> Skilled with multiple programming libraries - TensorFlow,
-                Pytorch, scikit-learn,
-                pandas, MNE - and different ML models Deep Neural Networks,CNN ,XGBoost, SVN and Random Forest.
+                PyTorch, scikit-learn, pandas, MNE - and various machine learning models, including Deep Neural
+                Networks, CNN, XGBoost, SVM, and Random Forest.
             </li>
             <li><strong>Containerization (Docker):</strong>
                 Able to set up, deploy, and manage
-                containerized applications to streamline development and deployment processes on Docker .</li>
+                containerized applications to streamline development and deployment processes using Docker.</li>
             <li><strong>Problem-Solving and Critical Thinking:</strong> Skilled in identifying issues and generating
                 solutions efficiently.
             </li>
@@ -122,7 +122,7 @@
                 analysis.
             </li>
             <li><strong>Catia:</strong> Skilled in mechanical modeling with Catia. <br> <em>Application:</em> Designed
-                mechanical components for medical devices (knee orthesis).</li>
+                mechanical components for medical devices (knee orthosis.).</li>
             <li><strong>Amesim:</strong> Familiar with Amesim for multi-domain system simulations. <br>
                 <em>Application:</em> Modeled fluid and mechanical dynamics systems in engineering coursework.
             </li>
@@ -148,13 +148,13 @@
         <br>
 
         <ul>
-            <li><strong>French:</strong> Native french speaker -Voltaire certification-
+            <li><strong>French:</strong> Native French speaker (Voltaire certification).
             </li>
-            <li><strong>English:</strong> Advanced english speaker and writer -TOEIC 980/990-
+            <li><strong>English:</strong> Advanced English speaker and writer (TOEIC 980/990).
             </li>
-            <li><strong>Spanish:</strong> Intermediate spanish speaking and writing -B1-
+            <li><strong>Spanish:</strong> Intermediate Spanish speaker and writer (B1).
             </li>
-            <li><strong>Chinese:</strong> Beginner chinese practitioner -HSK3-
+            <li><strong>Chinese:</strong> Beginner in Chinese (HSK3).
             </li>
         </ul>
         <br>
@@ -165,7 +165,7 @@
         <ul>
             <li><strong>Microsoft Office:</strong> Proficient in Word, Excel, and PowerPoint for documentation and data
                 analysis. </li>
-            <li><strong> Adobe Suite:</strong> Know the basics of image and video editing</li>
+            <li><strong> Adobe Suite:</strong> Basic knowledge of image and video editing.</li>
         </ul>
     </section>
     <script src="scripts.js"></script>
