--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <title>Projects - Alexandre Carminot</title>
+    <title>Projects | Alexandre Carminot</title>
     <link rel="icon" type="image/x-icon" href="assets/portfolio.ico">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -32,7 +32,7 @@
         <br>
         <br>
 
-        <p>Here, you can explore a selection of projects I have completed or contributed to, whether for academic
+        <p>Here, you can explore a selection of projects that I have completed or contributed to, whether for academic
             purposes or personal exploration.</p>
         <br>
         <ul>
@@ -43,36 +43,33 @@
                 <a href="https://github.com/Alex-Irae/DiseasePrediction" target="_blank"> [View on GitHub]</a><br>
                 Disease Prediction - Advanced Diagnostic Tool<br>&nbsp&nbsp&nbsp&nbsp <br>
                 Developed an AI-driven disease prediction system utilizing advanced machine learning algorithms to
-                accurately diagnose various diseases based on user-reported symptoms. This project aims to enhance
-                diagnostic accuracy and accessibility for patients outside traditional clinical environments.<br>
+                accurately diagnose various diseases based on user-reported symptoms. <br>This project aims to enhance
+                diagnostic accuracy and accessibility for patients outside of traditional clinical environments.<br>
                 &nbsp&nbsp&nbsp&nbsp<br>
                 <div class="description" style="display: none;">
 
                     Technical Implementation:<br>
 
-                    &nbsp&nbsp&nbsp&nbsp -Implemented a neural network architecture featuring a combination of Sigmoid,
-                    ReLU, Swish, and Softmax
-                    activation functions for optimal prediction accuracy.<br>
-                    &nbsp&nbsp&nbsp&nbsp -Employed data augmentation techniques like SMOTE to handle class imbalance in
+                    &nbsp&nbsp&nbsp&nbsp - Implemented a neural network architecture featuring a combination of Sigmoid,
+                    ReLU, Swish, and Softmax activation functions, achieving optimal prediction accuracy.<br>
+                    &nbsp&nbsp&nbsp&nbsp - Employed data augmentation techniques like SMOTE to handle class imbalance in
                     the
                     dataset.<br>
-                    &nbsp&nbsp&nbsp&nbsp -Utilized Optuna for hyperparameter optimization, enhancing model
+                    &nbsp&nbsp&nbsp&nbsp - Utilized Optuna for hyperparameter optimization, enhancing model
                     performance.<br>&nbsp&nbsp&nbsp&nbsp<br>
                     Research & Development:<br>
 
-                    &nbsp&nbsp&nbsp&nbsp -Conducted extensive data preprocessing and feature engineering to enhance
-                    model
-                    training.<br>
-                    &nbsp&nbsp&nbsp&nbsp -Analyzed model performance across various algorithms, including XGBoost, SVM,
+                    &nbsp&nbsp&nbsp&nbsp - Conducted extensive data preprocessing and feature engineering to enhance
+                    model training performance.<br>
+                    &nbsp&nbsp&nbsp&nbsp - Analyzed model performance across various algorithms, including XGBoost, SVM,
                     and
                     Logistic Regression.<br>
-                    &nbsp&nbsp&nbsp&nbsp -Validated model predictions on unseen data to ensure robustness and
+                    &nbsp&nbsp&nbsp&nbsp - Validated model predictions on unseen data to ensure robustness and
                     reliability.<br>&nbsp&nbsp&nbsp&nbsp<br>
                     Key Features:<br>
 
-                    &nbsp&nbsp&nbsp&nbsp - Achieved around 96% accuracy in predicting diseases based on symptoms, with a
-                    robust response to noise
-                    in input data.<br>
+                    &nbsp&nbsp&nbsp&nbsp - Achieved approximately 96% accuracy in predicting diseases based on symptoms,
+                    demonstrating robust response capabilities to noise in input data.<br>
                     &nbsp&nbsp&nbsp&nbsp - User-friendly interface for symptom input and disease prediction results.<br>
                     &nbsp&nbsp&nbsp&nbsp - Continuous model improvement through ongoing training with new data.<br>
                     &nbsp&nbsp&nbsp&nbsp - Documentation and guidelines for users to refine the model and provide
@@ -88,9 +85,8 @@
                     healthcare.<br>
                     &nbsp&nbsp&nbsp&nbsp<br>
                     Impact: <br>&nbsp&nbsp&nbsp&nbspThe system empowers users to receive timely health assessments and
-                    potential diagnoses,
-                    facilitating proactive healthcare management and improving access to medical guidance outside of
-                    clinical settings.
+                    potential diagnoses, facilitating proactive healthcare management and improving access to medical
+                    guidance outside clinical settings.
                 </div>
 
                 <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
@@ -116,8 +112,8 @@
             <li>
                 <strong onclick="openModal(['assets/hand2.jpg','assets/hand3.png','assets/hand.jpg'])">
                     BCI WorkShop - Tianjin University - Hand Movement Recognition 👁</strong> (MATLAB)<br>
-                Built a complete hand movement recognition system during an advanced HCI workshop at Tianjin University,
-                led by Dr. Uriel and Dr. Tareq. The project combined hardware and software components:<br>
+                Built a comprehensive hand movement recognition system during an advanced HCI workshop at Tianjin
+                University, led by Dr. Uriel and Dr. Tareq. The project combined hardware and software components:<br>
                 &nbsp&nbsp&nbsp&nbsp<br>
                 <div class="description" style="display: none;">
                     Hardware Implementation:<br>
@@ -137,10 +133,8 @@
                     &nbsp&nbsp&nbsp&nbsp- Trained the model using 70/30 split methodology with 5000+ iterations<br>
                     &nbsp&nbsp&nbsp&nbsp- Implemented real-time pattern recognition for immediate movement
                     classification<br>
-                    &nbsp&nbsp&nbsp&nbsp- Created complete information processing chain: sensor input → pattern
-                    recognition
-                    → motor
-                    control<br>
+                    &nbsp&nbsp&nbsp&nbsp- Created a complete information-processing chain: sensor input → pattern
+                    recognition → motor control.<br>
                     &nbsp&nbsp&nbsp&nbsp <br>
                     Results:<br>
                     Successfully developed a system capable of recognizing and reproducing complex hand movements in
@@ -162,7 +156,8 @@
                     Knee Orthosis Development 👁</strong> (Python, MATLAB)<br>
                 Knee Orthosis Development - Motion Analysis & Rehabilitation<br>
                 &nbsp&nbsp&nbsp&nbsp<br>
-                Developed an intelligent knee orthosis system for precise rehabilitation monitoring and analysis. This
+                Developed an intelligent knee orthosis system for precise monitoring and analysis of rehabilitation.
+                This
                 project addressed the critical need for quantitative tracking of knee rehabilitation progress outside
                 clinical settings.<br>
                 &nbsp&nbsp&nbsp&nbsp <br>
@@ -181,7 +176,7 @@
                     system<br>
                     &nbsp&nbsp&nbsp&nbsp <br>
                     Research & Development:<br>
-                    &nbsp&nbsp&nbsp&nbsp- Conducted comprehensive motion analysis in MotionLab environment<br>
+                    &nbsp&nbsp&nbsp&nbsp- Conducted comprehensive motion analysis in MotionLab environment.<br>
                     &nbsp&nbsp&nbsp&nbsp- Performed comparative analysis between IMU data and Vicon reference system<br>
                     &nbsp&nbsp&nbsp&nbsp- Processed and analyzed motion data using MATLAB for precise movement
                     classification<br>
@@ -214,7 +209,7 @@
             <li>
                 <strong>My Portfolio</strong> (HTML, CSS & Js)
                 <a href="https://github.com/Alex-Irae/Portfolio" target="_blank">[View on GitHub]</a><br>
-                The website you are currently visiting, exposing who I am, and what I do.
+                This website presents who I am and what I do.
             </li>
             <li>
                 <strong onclick=" openModal(['assets/fdf.png','assets/fdf2.png'])">
