--- a/projects.html
+++ b/projects.html
@@ -149,7 +149,7 @@
                 <strong>
                     AI Text Summarization Project </strong> (Python) - In Progess - <br>
                 Currently developing an AI system to summarize texts using PyTorch and Tensorflow to classify them
-                into different categories, based on FengShenBang LLm.
+                into different categories, based on FengShenBang LLM.
             </li>
             <li>
                 <strong onclick="openModal(['assets/ort.png','assets/ort2.png','assets/ort3.png',])">
