--- a/education.html
+++ b/education.html
@@ -63,9 +63,15 @@
         <h2>Certifications</h2>
         <br>
         <ul>
-            <li><strong>Advanced Medical Neuroscience,</strong> Duke University -Online Course- (Fall 2024)</li>
-            <li><strong>Deep Learning and AI with TensorFlow,</strong> DeepLearning.AI -Online Course- (Fall 2024)</li>
-            <li><strong>Machine Learning,</strong> Stanford x DeepLearning.AI -Online Course- (Fall 2024)</li>
+            <li><strong>Advanced Medical Neuroscience,</strong> Duke University -Online Course- (Fall 2024)<br>
+                Neuroanatomy, Neurophysiology, Neuropharmacology, and Neuroimaging
+            </li>
+            <li><strong>Deep Learning and AI with TensorFlow,</strong> DeepLearning.AI -Online Course- (Fall 2024)<br>
+                TensorFlow, Convolutional Neural Networks, Natural Language Processing, and Sequence Models
+            </li>
+            <li><strong>Machine Learning,</strong> Stanford x DeepLearning.AI -Online Course- (Fall 2024)<br>
+                Supervised Learning, Unsupervised Learning, Neural Networks, and Structured Machine Learning Projects
+            </li>
             <li><strong>Certificate of Aeronautical Initiation,</strong> Foundational knowledge in aeronautics - Paris
                 (2023)</li>
         </ul>
