--- a/education.html
+++ b/education.html
@@ -69,7 +69,8 @@
             <li><strong>Deep Learning and AI with TensorFlow,</strong> DeepLearning.AI -Online Course- (Fall 2024)<br>
                 TensorFlow, Convolutional Neural Networks, Natural Language Processing, and Sequence Models
             </li>
-            <li><strong>Machine Learning,</strong> Stanford x DeepLearning.AI -Online Course- (Fall 2024)<br>
+            <li><strong>Machine Learning Specialization,</strong> Stanford x DeepLearning.AI -Online Course- (Fall
+                2024)<br>
                 Supervised Learning, Unsupervised Learning, Neural Networks, and Structured Machine Learning Projects
             </li>
             <li><strong>Certificate of Aeronautical Initiation,</strong> Foundational knowledge in aeronautics - Paris
