added education description and skill description + page intro

--- a/education.html
+++ b/education.html
@@ -36,26 +36,45 @@
         <h1>My Education</h1>
         <br>
         <br>
-
-        <p>Here are the details of my educational background, my degrees, institutions I studied in, and relevant
-            courses and certifications.</p>
+        <div class="description">
+            <p> My academic journey has focused on combining engineering principles with medical technology, primarily
+                through my Master’s in Medical Engineering at EPF Engineering School Paris. Here, I’ve built expertise
+                in
+                programming applied to medicine, tackling diverse problem-solving projects across courses and labs (see
+                Project section). Two exchange programs at Tianjin University, in Intelligent Medical Engineering and
+                Computer Science, further broadened my skills in healthcare technologies and intelligent systems.
+                <br> <br>
+                To deepen my knowledge, I’ve completed certifications, including Duke University’s Advanced Medical
+                Neuroscience, Stanford’s Machine Learning Specialization, and DeepLearning.AI’s TensorFlow for AI. These
+                experiences have given me a robust foundation in problem-solving, adaptability, and applied machine
+                learning, preparing me to innovate in medical engineering.
+            </p>
+        </div>
         <br>
 
         <h2>University</h2>
         <br>
 
         <ul>
-            <li><strong>Master's in Medical Engineering,</strong> EPF Engineering School Paris (09/2023 - Present)<br>
-                <em>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                    Expected graduation in June 2025</em>
+            <li><strong>Master's in Medical Engineering,</strong> EPF Engineering School Paris (09/2023 - Present),<em>
+                    Expected graduation in June 2025</em> <br>
+                <em>Skills learned:</em> Problem-solving, analytical and critical thinking,collaborative teamwork,
+                medical
+                engineering principles, programming for medical applications, medical device design.
+
             </li>
             <li> <strong>Exchange Program,</strong> Tianjin University, College of Future Technologies, Computer Science
-                Department (Fall 2024)
+                Department (Fall 2024)<br>
+                <em>Skills learned: </em>Algorithmic programming, machine learning , computer vision,
+                applied data
+                science, coding for scalability and optimization, collaborative project development.
+
             </li>
             <li> <strong>Exchange Program,</strong> Tianjin University, College of Medicine, Intelligent Medical
-                Engineering (Fall 2023)
+                Engineering (Fall 2023)<br>
+                <em>Skills learned:</em> Precision medicine, neurosciences, brain-computer interfaces (BCI), medical
+                imaging basics, fundamentals of medical engineering, multidisciplinary collaboration in healthcare
+                innovation.
             </li>
             <li><strong>Bachelor in General Engineering,</strong> EPF Engineering School Paris (09/2019 - 06/2023)</li>
         </ul>
