--- a/experience.html
+++ b/experience.html
@@ -31,9 +31,12 @@
         <h1>My Experience</h1>
         <br>
         <br>
-
-        <p>Throughout my journey to becoming an engineer, I’ve had the opportunity to explore various industries through
-            different jobs, allowing me to interact with diverse people and perspectives.</p>
+        <div class="description">
+            <p>This section outlines my professional experiences, which have provided me with valuable insights across
+                various industries. Through these roles, I've had the chance to engage with diverse teams and
+                perspectives,
+                enhancing my understanding of engineering in real-world contexts.</p>
+        </div>
         <br>
         <h2>Internship</h2>
         <ul>
