--- a/projects.html
+++ b/projects.html
@@ -31,9 +31,13 @@
         <h1>My Projects</h1>
         <br>
         <br>
-
-        <p>Here, you can explore a selection of projects that I have completed or contributed to, whether for academic
-            purposes or personal exploration.</p>
+        <div class="description">
+            <p>This section provides an overview of various projects I have completed or contributed to, ranging from
+                academic endeavors to personal explorations. Each project reflects my interests and the practical
+                application of my skills, demonstrating my commitment to the field. I invite you to explore the details
+                and
+                insights of my work. </p>
+        </div>
         <br>
         <ul>
             <li>
