--- a/skills.html
+++ b/skills.html
@@ -31,8 +31,14 @@
         <h1>My Skills</h1>
         <br>
         <br>
-        <p>Below are the key skills I have developed through my experience in medical engineering, neuroscience, and
-            software development.</p>
+        <div class="description">
+            <p>Below are the key skills I have developed through my academic and practical experiences in medical
+                engineering, neuroscience, and software development. These skills encompass programming languages,
+                technical
+                proficiency, data analysis, and soft skills, enabling me to tackle complex problems in healthcare
+                technology
+                and engineering.</p>
+        </div>
         <br>
         <h2>Programming Languages</h2>
         <br>
@@ -46,34 +52,14 @@
                 </div>
                 Proficient in Python for AI, Machine Learning, data analysis, and signal processing <br>
                 <em>Application:</em> Developed an app to predict disease given a list of symptom using Deep Neural
-                Network and Machine learning models.<br>
+                Network and Machine learning models.<br> <br>
                 Currently developing a BCI simulator to control applications using brain signals.
-            </li>
-            <li>
-                <div class="skill-header">
-                    <strong>Java</strong>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 75%;"></div>
-                    </div>
-                </div>
-                Acquainted with Java for software development tasks.<br>
-                <em>Application:</em> Used Java for academic software projects and simulations.
-            </li>
-            <li>
-                <div class="skill-header">
-                    <strong>MATLAB</strong>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 75%;"></div>
-                    </div>
-                </div>
-                Expertise in MATLAB for modeling, data analysis, and signal processing.<br>
-                <em>Application:</em> Classified finger movements using MATLAB in medical engineering projects.
             </li>
             <li>
                 <div class="skill-header">
                     <strong>HTML, CSS, and JavaScript (JS)</strong>
                     <div class="progress-bar">
-                        <div class="progress" style="width: 70%;"></div>
+                        <div class="progress" style="width: 75%;"></div>
                     </div>
                 </div>
                 Knowledgeable in HTML, CSS, and JavaScript (JS) for structuring web content.<br>
@@ -81,13 +67,33 @@
             </li>
             <li>
                 <div class="skill-header">
+                    <strong>Java</strong>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 70%;"></div>
+                    </div>
+                </div>
+                Acquainted with Java for software development tasks.<br>
+                <em>Application:</em> Used Java for academic software projects and simulations.
+            </li>
+            <li>
+                <div class="skill-header">
                     <strong>C++</strong>
                     <div class="progress-bar">
-                        <div class="progress" style="width: 60%;"></div>
+                        <div class="progress" style="width: 50%;"></div>
                     </div>
                 </div>
                 Familiar with C++ for performance-critical applications.<br>
                 <em>Application:</em> Applied C++ in neural network modeling and engineering tasks.
+            </li>
+            <li>
+                <div class="skill-header">
+                    <strong>MATLAB</strong>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 50%;"></div>
+                    </div>
+                </div>
+                Expertise in MATLAB for modeling, data analysis, and signal processing.<br>
+                <em>Application:</em> Classified finger movements using MATLAB in medical engineering projects.
             </li>
         </ul>
         <br>
@@ -98,7 +104,7 @@
                 draw meaningful conclusions.
             </li>
             <li><strong>AI and Machine Learning:</strong> Skilled with multiple programming libraries - TensorFlow,
-                PyTorch, scikit-learn, pandas, MNE - and various machine learning models, including Deep Neural
+                PyTorch, scikit-learn, pandas, MNE - <br> and various machine learning models, including Deep Neural
                 Networks, CNN, XGBoost, SVM, and Random Forest.
             </li>
             <li><strong>Containerization (Docker):</strong>
@@ -118,12 +124,14 @@
 
         <ul>
             <li><strong>MATLAB:</strong>: Used for simulating and analyzing systems in medical engineering and AI. <br>
+                <br>
                 <em>Application:</em> Utilized MATLAB to calculate knee flexion from visual cues during movement
                 analysis.
             </li>
-            <li><strong>Catia:</strong> Skilled in mechanical modeling with Catia. <br> <em>Application:</em> Designed
+            <li><strong>Catia:</strong> Skilled in mechanical modeling with Catia. <br> <br> <em>Application:</em>
+                Designed
                 mechanical components for medical devices (knee orthosis.).</li>
-            <li><strong>Amesim:</strong> Familiar with Amesim for multi-domain system simulations. <br>
+            <li><strong>Amesim:</strong> Familiar with Amesim for multi-domain system simulations. <br> <br>
                 <em>Application:</em> Modeled fluid and mechanical dynamics systems in engineering coursework.
             </li>
         </ul>
