--- a/skills.html
+++ b/skills.html
@@ -113,8 +113,8 @@
             <li><strong>Problem-Solving and Critical Thinking:</strong> Skilled in identifying issues and generating
                 solutions efficiently.
             </li>
-            <li><strong>Research and Information Gathering:</strong> Able to quickly adapt to new challenges and
-                environments.
+            <li><strong>Research and Information Gathering:</strong> Proficient in sourcing, analyzing, and synthesizing
+                relevant information to support informed decision-making.
             </li>
         </ul>
         <br>
