double br skills

--- a/skills.html
+++ b/skills.html
@@ -123,15 +123,15 @@
         <br>
 
         <ul>
-            <li><strong>MATLAB:</strong>: Used for simulating and analyzing systems in medical engineering and AI. <br>
+            <li><strong>MATLAB:</strong>: Used for simulating and analyzing systems in medical engineering and AI.
                 <br>
                 <em>Application:</em> Utilized MATLAB to calculate knee flexion from visual cues during movement
                 analysis.
             </li>
-            <li><strong>Catia:</strong> Skilled in mechanical modeling with Catia. <br> <br> <em>Application:</em>
+            <li><strong>Catia:</strong> Skilled in mechanical modeling with Catia. <br>  <em>Application:</em>
                 Designed
                 mechanical components for medical devices (knee orthosis.).</li>
-            <li><strong>Amesim:</strong> Familiar with Amesim for multi-domain system simulations. <br> <br>
+            <li><strong>Amesim:</strong> Familiar with Amesim for multi-domain system simulations. <br> 
                 <em>Application:</em> Modeled fluid and mechanical dynamics systems in engineering coursework.
             </li>
         </ul>
