double br add education

--- a/education.html
+++ b/education.html
@@ -57,21 +57,21 @@
 
         <ul>
             <li><strong>Master's in Medical Engineering,</strong> EPF Engineering School Paris (09/2023 - Present),<em>
-                    Expected graduation in June 2025</em> <br>
+                    Expected graduation in June 2025</em> <br> <br>
                 <em>Skills learned:</em> Problem-solving, analytical and critical thinking,collaborative teamwork,
                 medical
                 engineering principles, programming for medical applications, medical device design.
 
             </li>
             <li> <strong>Exchange Program,</strong> Tianjin University, College of Future Technologies, Computer Science
-                Department (Fall 2024)<br>
+                Department (Fall 2024)<br> <br>
                 <em>Skills learned: </em>Algorithmic programming, machine learning , computer vision,
                 applied data
                 science, coding for scalability and optimization, collaborative project development.
 
             </li>
             <li> <strong>Exchange Program,</strong> Tianjin University, College of Medicine, Intelligent Medical
-                Engineering (Fall 2023)<br>
+                Engineering (Fall 2023)<br> <br>
                 <em>Skills learned:</em> Precision medicine, neurosciences, brain-computer interfaces (BCI), medical
                 imaging basics, fundamentals of medical engineering, multidisciplinary collaboration in healthcare
                 innovation.
