--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="home-content">
             <h1>Hi, I'm <span>Alexandre CARMINOT</span></h1>
             <h3 class="typing-text">I am an engineering student.</h3>
-            <p>AAs a student of engineering and medicine, my journey is deeply rooted in the intersection of
+            <p>As a student of engineering and medicine, my journey is deeply rooted in the intersection of
                 neuroscience and technology. Focusing on medical engineering, I am driven by a passion for software
                 development and artificial intelligence, particularly in the realms of brain-computer interfaces,
                 machine learning, and neuroengineering. My work has spanned projects using Python, MATLAB, and C++ to
