--- a/education.html
+++ b/education.html
@@ -85,13 +85,20 @@
             <li><strong>Advanced Medical Neuroscience,</strong> Duke University -Online Course- (Fall 2024)<br>
                 Neuroanatomy, Neurophysiology, Neuropharmacology, and Neuroimaging
             </li>
+            <li><strong>Machine Learning Specialization,</strong> Stanford x DeepLearning.AI -Online Course- (Fall
+                2024)<br>
+                Supervised Learning, Unsupervised Learning, Neural Networks, and Advanced Structured Machine Learning
+                Projects
+            </li>
+            <li><strong>Advanced Machine Learning on Google Cloud Specialization,</strong> SGoogle -Online Course- (Fall
+                2024)<br>
+                Advanced Machine Learning Engineering, Cloud compute, TensorFlow, Computer Vision and Natural Language
+                Processing
+            </li>
             <li><strong>Deep Learning and AI with TensorFlow,</strong> DeepLearning.AI -Online Course- (Fall 2024)<br>
                 TensorFlow, Convolutional Neural Networks, Natural Language Processing, and Sequence Models
             </li>
-            <li><strong>Machine Learning Specialization,</strong> Stanford x DeepLearning.AI -Online Course- (Fall
-                2024)<br>
-                Supervised Learning, Unsupervised Learning, Neural Networks, and Structured Machine Learning Projects
-            </li>
+
             <li><strong>Certificate of Aeronautical Initiation,</strong> Foundational knowledge in aeronautics - Paris
                 (2023)</li>
         </ul>
