--- a/experience.html
+++ b/experience.html
@@ -43,10 +43,25 @@
             <li>
                 <strong>Intern,</strong> Zen2050 (Paris) <em>(Summer 2022)</em><br><br>
 
-                Authored detailed specification documents for the annual event, contributing to successful
-                planning and execution.
-                Analyzed previous event data to design and propose engaging activities, ensuring feasibility and
-                relevance for future events.
+                I had the opportunity to contribute to our mission of action toward during my internship at
+                Zen2050Maintenant, a climate focused organization in Paris.
+                Zen2050 is dedicated to addressing climate issues on a local scale within the
+                Hauts-de-Seine and Val-de-Marne regions, particularly by promoting sustainable practices and educational
+                activities. They focus on integrating climate initiatives into local community structures through
+                projects like “thermal walks,” where members assess local buildings for heat loss to encourage energy
+                efficiency, and educational partnerships with schools to teach students about the importance of reducing
+                their carbon footprint​.
+                <br> <br>
+                As part of my role, I was involved in planning and organizing their annual exhibition event, a central
+                part of Zen2050's outreach efforts. My primary responsibility was to design various interactive stands,
+                with a focus on activities that would engage visitors and help them connect with Zen2050’s mission in a
+                hands-on way. I brainstormed and implemented creative ideas, including eco-conscious games, an area for
+                climate-themed painting, and other activities designed to be informative and fun. I also managed the
+                budget for these stations, making sure each idea was feasible without exceeding our financial
+                constraints.
+                <br> <br>
+                Overall, this experience allowed me to blend creativity with practical considerations, enhancing my
+                ability to design impactful community events that support meaningful environmental goals.
 
             </li>
         </ul>
